--- a/Sources/CorePermissionsSwiftUI/Resources/ko.lproj/Localizable.strings
+++ b/Sources/CorePermissionsSwiftUI/Resources/ko.lproj/Localizable.strings
@@ -1,5 +1,5 @@
 /* MARK: Allow Button */
-"button_allow" = "허용";
+"button_allow" = "계속하기";
 "button_allowed" = "허용됨";
 "button_denied" = "거부됨";
 "button_next" = "다음";
